# notebooklm-podcast-automator

./: .envrc  .gitignore  COMO_USAR.md  README.md  SOLUCAO_CDP.md  Taskfile.yml  aqua-checksums.json  aqua.yaml  pyproject.toml  run_streamlit.ps1  start_chrome_debug.ps1
src/notebooklm_automator/: __init__.py  core.py  links.py  main.py  notebooklm_streamlit_app.py  spotify.py  spotify_streamlit_app.py  streamlit_app.py  url_handler.py
